Fix displaying ResourceGraphs on Safari (#1177)
* Added height to scss

* bump

--- a/core-ui/src/shared/components/ResourceGraph/ResourceGraph.scss
+++ b/core-ui/src/shared/components/ResourceGraph/ResourceGraph.scss
@@ -13,6 +13,7 @@
   position: relative;
 
   & > :first-child {
+    height: 100%;
     width: 100%;
   }
 
